--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "look-in-their-eyes": "file:",
     "next": "14.2.15",
+    "next-intl": "^3.21.1",
     "react": "^18",
     "react-dom": "^18"
   },
