--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "look-in-their-eyes",
   "version": "0.1.0",
   "private": true,
+  "browserslist": [
+    ">0.3%",
+    "not dead",
+    "not op_mini all"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
