--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.15",
     "next-intl": "^3.21.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-pageflip": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
