--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.11.10",
     "look-in-their-eyes": "file:",
     "next": "14.2.15",
     "next-intl": "^3.21.1",
