--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "accessibility": "^6.0.7",
     "framer-motion": "^11.11.10",
     "look-in-their-eyes": "file:",
     "next": "14.2.15",
