--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-intl": "^3.24.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-pageflip": "^2.0.3"
   },
   "devDependencies": {
