--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.2",
     "accessibility": "^6.0.7",
     "framer-motion": "^11.11.11",
     "look-in-their-eyes": "file:",
