--- a/package.json
+++ b/package.json
@@ -14,18 +14,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/nodemailer": "^6.4.16",
     "@vercel/analytics": "^1.3.2",
     "accessibility": "^6.0.7",
     "framer-motion": "^11.11.13",
     "look-in-their-eyes": "file:",
     "next": "15.0.3",
     "next-intl": "^3.25.1",
-    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-pageflip": "^2.0.3"
+    "react-pageflip": "^2.0.3",
+    "resend": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
