--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-pageflip": "^2.0.3",
+    "react-swipeable": "^7.0.2",
     "resend": "^4.0.1"
   },
   "devDependencies": {
