--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-spring": "^9.7.4",
     "resend": "^4.0.1"
   },
   "devDependencies": {
