--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "@use-gesture/react": "^10.3.1",
     "@vercel/analytics": "^1.3.2",
     "accessibility": "^6.0.7",
@@ -24,7 +25,6 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-spring": "^9.7.4",
     "resend": "^4.0.1"
   },
   "devDependencies": {
