--- a/package.json
+++ b/package.json
@@ -16,21 +16,25 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.2",
     "accessibility": "^6.0.7",
-    "framer-motion": "^11.12.0",
+    "framer-motion": "^12.0.0-alpha.2",
     "look-in-their-eyes": "file:",
-    "next": "15.0.3",
-    "next-intl": "^3.25.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.1.0",
+    "next-intl": "^3.26.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-icons": "^5.3.0",
     "resend": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "15.1.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2"
   }
 }
