--- a/package.json
+++ b/package.json
@@ -16,25 +16,21 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.2",
     "accessibility": "^6.0.7",
-    "framer-motion": "^12.0.0-alpha.2",
+    "framer-motion": "^11.15.0",
     "look-in-their-eyes": "file:",
     "next": "15.1.0",
     "next-intl": "^3.26.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-icons": "^5.3.0",
     "resend": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.1.0",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2"
   }
 }
