--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@million/lint": "^1.0.14",
     "@react-spring/web": "^9.7.5",
     "@use-gesture/react": "^10.3.1",
     "@vercel/analytics": "^1.3.2",
