--- a/package.json
+++ b/package.json
@@ -18,19 +18,23 @@
     "accessibility": "^6.0.7",
     "framer-motion": "^11.15.0",
     "look-in-their-eyes": "file:",
-    "next": "15.1.0",
-    "next-intl": "^3.26.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "resend": "^4.0.1"
+    "next": "15.3.0",
+    "next-intl": "^4.0.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
+    "resend": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.1",
+    "@types/react-dom": "19.1.2",
     "eslint": "^8",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "15.3.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.1",
+    "@types/react-dom": "19.1.2"
   }
 }
